构建链表结构

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>算法学习</title>
 </head>
 <body>
+    <!-- <script src="index.js"></script> -->
     <script src="./LinkedList.js"></script>
 </body>
 </html>
