--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- <script src="index.js"></script> -->
-    <script src="./LinkedList.js"></script>
+    <!--<script src="./LinkedList.js"></script>-->
+    <script src="./DoublyLinkedList.js"></script>
 </body>
 </html>
