修复es6语法错误

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>算法学习</title>
 </head>
 <body>
-     <script src="index.js"></script>
+     <!-- <script src="index.js"></script> -->
+     <script src="es6.js"></script>
     <!--<script src="./LinkedList.js"></script>-->
     <!--<script src="./DoublyLinkedList.js"></script>-->
 </body>
